# mcp_server_test

./: .gitignore  README.md  pyproject.toml  server.json  test_client.py
mcp_math_server/: __init__.py  server.py
