[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mcp-math-server"
version = "0.1.0"
description = "A toy MCP server providing math functions"
readme = "README.md"
authors = ["MCP Test <test@example.com>"]
license = "MIT"
keywords = ["mcp", "server", "math", "calculator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "mcp_math_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = ">=0.1.0"
click = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
mypy = ">=1.0.0"

[tool.poetry.scripts]
mcp-math-server = "mcp_math_server.server:mcp.run"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

